10.1/readme.md
### Инструкция по запуску автотестов
1. Скачать и установить VSCode
2. Открыть в VSCode Терминал
3. Проверить наличие Node.js с помощью команды `$ node -v` (при отсутствии - установить)
4. Установить через Терминал **npm/yarn** с помощью команды `$ npm install` / `$ brew install yarn`
5. Создать fork проекта на Github, скопировать ветку в локальное хранилище `$ git clone [url-адрес]`
6. Инициализировать **npm/yarn** с помощью команды `$ npm init` / `$yarn init -y`. Отредактитровать при необходимости файл `package.json`.
7. Установить **jest** с помощью команды `$ npm install --save-dev jest`. Убедиться, что в нем содержится запись:
```
"scripts": {
"test": "jest"
},
```
8. Запускать unit-тесты с помощью команды `$ npm run test` или `$ yarn test`

### Инструкция по получению результатов покрытия тестами
1. Установить **babel plugin istanbul** с помощью команды `npm install --save-dev babel-plugin-istanbul`
2. Выполнить проверку тестового покрытия с помощью команды `npx jest --coverage`

### Описание результата работы покрытия
1. Functions `1/1` - тестируемая функция Calculate.Bonus
2. Branches `2/2` - проверяемые условия в количестве 2-х штук
   * sum > 50 -> bonus = 50
   * sum <= 50 -> bonus = sum
3. Lines  `6/6` - используемые строки:
   * объявление функции
   * вычисление суммы
   * условия
   * вернуть результат работы функции
   * вывод результата работы вызванной функции
   * экспорт функции  
