10.2/readme.md
### Инструкция по запуску автотестов
1. Скачать и установить VSCode
2. Открыть в VSCode Терминал
3. Проверить наличие Node.js с помощью команды `$ node -v` (при отсутствии - установить)
4. Установить через Терминал **npm/yarn** с помощью команды `$ npm install` / `$ brew install yarn`
5. Создать fork проекта на Github, скопировать ветку в локальное хранилище `$ git clone [url-адрес]`
6. Инициализировать **npm/yarn** с помощью команды `$ npm init` / `$yarn init -y`. Отредактитровать при необходимости файл `package.json`.
7. Установить **jest** с помощью команды `$ npm install --save-dev jest`. Убедиться, что в файле `package.json` содержится запись:
```
"scripts": {
"test": "jest"
},
```
8. Запускать unit-тесты с помощью команды `$ npm run test` или `$ yarn test`

### Инструкция по получению результатов покрытия тестами
1. Установить **babel plugin istanbul** с помощью команды `npm install --save-dev babel-plugin-istanbul`
2. Выполнить проверку тестового покрытия с помощью команды `npx jest --coverage`

### Описание результата работы покрытия
1. Functions `4/4` - число вызываемых функций в том числе и стрелочных из числа всех функций(maxScore; стрелочная функция внутри Array.filter; функция сравнения внутри winners.sort; стрелочная функция внутри forEach)
2. Branches `4/4` - проверяемые условия (3 условия вызова функции сравнения и 1 опция когда функция не вызывается)
3. Lines  `17/17` - используемые строки:
   * объявление массива данных
   * объявление переменной для записи результатов в массив
   * объявление цикла for
   * запись результата работы цикла для подмассива, массива studentsGroup
   * объявление  переменной x и запись в нее максимального значения по баллам(score)
   * вывод значения переменной x
   * объявление переменной winners (это массив), куда записываются отфильтрованные объекты с максимальными баллами(score)
   * сортировка массива winners с помощью функции сравнения
   * если дата a больше дата b
   * вернуть 1 (тогда a идет нулевым членом массива, b - первым) 
   * если дата a меньше дата b
   * вернуть -1 (тогда b идет нулевым членом массива, a - первым) 
   * вернуть 0 (для случаев равенства дат a и b)
   * возвращаемый результат с поздравлением победителей
   * вызов forEach для прохождения по всему массиву(studentsGroup) с подмассивами
   * вывод результатов работы функции maxScore по каждому подмассиву, внустри массива studentsGroup
   * экспорт функции 